# lophos

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAKEFILE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SCHEMA.md  index.md  lophos_terminal_commands_runbook_hg_00733.md  run-app.md  run.md  usage.md
examples/configs/: example.yaml
examples/notebooks/: exploration.md
src/lophos/: __init__.py  cli.py  constants.py
src/lophos/core/: apa.py  calls.py  counts_loops.py  counts_peaks.py  motif.py  stats.py  validate_local.py
src/lophos/io/: bam.py  bed.py  bedpe.py  config.py
src/lophos/report/: qc.py  summary.py  writers.py
src/lophos/utils/: fdr.py  logging.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_fdr.py  test_stats_binomial.py
